--- a/sass/blocks/info-table.scss
+++ b/sass/blocks/info-table.scss
@@ -4,22 +4,22 @@
   @media (min-width: $tablet-width) {
     width: 291px;
   }
+}
 
-  &__item-value {
-    margin: 0;
-    padding: 0;
-    padding-top: 7px;
-    padding-right: 28px;
+.info-table__item-value {
+  margin: 0;
+  padding: 0;
+  padding-top: 7px;
+  padding-right: 28px;
+  padding-bottom: 8px;
+  border-bottom: 1px solid $grey;
+
+  @media (min-width: $tablet-width) {
+    padding-right: 0;
     padding-bottom: 8px;
-    border-bottom: 1px solid $grey;
+  }
 
-    @media (min-width: $tablet-width) {
-      padding-right: 0;
-      padding-bottom: 8px;
-    }
-
-    @media (min-width: $desktop-width) {
-      padding-bottom: 9px;
-    }
+  @media (min-width: $desktop-width) {
+    padding-bottom: 9px;
   }
 }
