--- a/sass/titles.scss
+++ b/sass/titles.scss
@@ -1,33 +1,4 @@
 .page-title {
-  &__text {
-    margin: 0;
-    color: $black;
-    text-align: center;
-    letter-spacing: 0;
-    font-weight: 700;
-    font-size: 27px;
-    font-family: $open-sans;
-    line-height: 30px;
-
-    @media (min-width: $tablet-width) {
-      padding-top: 25px;
-      font-size: 43px;
-      line-height: 50px;
-    }
-
-    @media (min-width: $desktop-width) {
-      font-size: 53px;
-      line-height: 57px;
-    }
-
-    &--index {
-      @media (min-width: $desktop-width) {
-        margin: 0 auto;
-        width: 700px;
-      }
-    }
-  }
-
   & .page-title__container--index {
     padding-top: 70px;
     min-height: 283px;
@@ -155,5 +126,34 @@
   @media (min-width: $desktop-width) {
     font-size: 53px;
     line-height: 57px;
+  }
+}
+
+.page-title__text {
+  margin: 0;
+  color: $black;
+  text-align: center;
+  letter-spacing: 0;
+  font-weight: 700;
+  font-size: 27px;
+  font-family: $open-sans;
+  line-height: 30px;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 25px;
+    font-size: 43px;
+    line-height: 50px;
+  }
+
+  @media (min-width: $desktop-width) {
+    font-size: 53px;
+    line-height: 57px;
+  }
+
+  &--index {
+    @media (min-width: $desktop-width) {
+      margin: 0 auto;
+      width: 700px;
+    }
   }
 }
