--- a/sass/blocks/advantages.scss
+++ b/sass/blocks/advantages.scss
@@ -11,7 +11,7 @@
     margin-bottom: 4px;
   }
 
-  & .page-subtitle {
+  .page-subtitle {
     margin-bottom: 55px;
 
     @media (min-width: $tablet-width) {
