--- a/sass/blocks/contacts.scss
+++ b/sass/blocks/contacts.scss
@@ -17,7 +17,7 @@
     flex-wrap: wrap;
   }
 
-  & .container {
+  .container {
     display: flex;
     flex-direction: column;
 
@@ -28,7 +28,7 @@
     }
   }
 
-  & .page-subtitle {
+  .page-subtitle {
     position: relative;
     margin-bottom: 27px;
     letter-spacing: 0;
