--- a/sass/blocks/form-order.scss
+++ b/sass/blocks/form-order.scss
@@ -5,7 +5,7 @@
     margin-bottom: 30px;
   }
 
-  & .container {
+  .container {
     @media (min-width: $tablet-width) {
       padding: 0;
     }
