--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -1,7 +1,7 @@
 .page-footer {
   background-color: $seashell;
 
-  & .container {
+  .container {
     @media (min-width: $tablet-width) {
       display: flex;
       flex-direction: row;
