--- a/sass/blocks/reviews.scss
+++ b/sass/blocks/reviews.scss
@@ -11,7 +11,7 @@
     padding-bottom: 78px;
   }
 
-  & .container {
+  .container {
     position: relative;
     display: flex;
     flex-direction: column;
