--- a/sass/blocks/week-product.scss
+++ b/sass/blocks/week-product.scss
@@ -6,7 +6,7 @@
     margin: 0;
   }
 
-  & .container {
+  .container {
     @media (min-width: $tablet-width) {
       padding-bottom: 65px;
 
@@ -37,7 +37,7 @@
     }
   }
 
-  & .page-subtitle {
+  .page-subtitle {
     z-index: 1;
     margin: 0;
     padding: 0;
