--- a/sass/titles.scss
+++ b/sass/titles.scss
@@ -1,5 +1,5 @@
 .page-title {
-  & .page-title__container--index {
+  .page-title__container--index {
     padding-top: 70px;
     min-height: 283px;
     background: url("../img/hero-mobile@1x.jpg") no-repeat 50% 18%;
@@ -34,7 +34,7 @@
     }
   }
 
-  & .page-title__container--catalog,
+  .page-title__container--catalog,
   .page-title__container--form {
     padding-top: 70px;
     padding-bottom: 78px;
